# chimera-rancher

./: Cargo.toml  README.md  build_wasm.sh  chimera-rancher.d.ts  chimera-rancher.js  chimera-rancher_bg.wasm.d.ts  index.html
.github/workflows/: ci.yml  wasm.yml
assets/: main_menu.xcf
assets/itch/: banner.xcf  cover.xcf
src/: camera.rs  constants.rs  day_cycle.rs  gameover.rs  health.rs  houses.rs  hud.rs  inventory_parts.rs  main.rs  main_menu.rs  player.rs  projectile.rs  sound_manager.rs  states.rs
src/animals/: behavior.rs  bob_anim.rs  mod.rs  spawn.rs
src/animations/: mod.rs
src/assets_manager/: mod.rs
src/behaviors/: attack.rs  mod.rs
src/chimeras/: behavior.rs  chimera_part.rs  mod.rs
src/helpers/: texture.rs
src/inventory_parts/: interaction.rs  mod.rs
src/pause_menu/: mod.rs  ui.rs
src/spells/: fire_projectile.rs  mod.rs  spawn_chimera.rs
src/stats_window/: mod.rs  ui.rs  ui_bars.rs
src/villagers/: behavior.rs  mod.rs  spawn.rs
wasm-page-template/: index.html
