[package]
name = "chimera-rancher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

[dependencies]
bevy = "0.7.0"
bevy_rapier2d = {version = "0.14.1", features = ["debug-render"]}
rand = "0.8.5"
rand_distr = "0.4.3"
bevy_tweening = "0.4.0"
bevy_ninepatch = "0.7.0"
bevy_kira_audio = { version = "0.10.0", features = ["ogg"]}
bevy_asset_loader = "0.11.0"

# optimize dev packages as we don't need them in debug version
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

#[features]
#default = ["bevy/dynamic"] # to make the wasm github action work with the --no-default-feature flag

# Enabling bevylint
[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/MinerSebas/bevy_lint", branch = "main" },
]
